[package]
name = "moka-py"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_moka_py"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
moka = { version = "0.12.15", features = ["sync"] }
pyo3 = { version = "0.29.0" }
mimalloc = { optional = true, version = "0.1.52", features = [
    "override",
    "local_dynamic_tls",
]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = []
mimalloc = ["dep:mimalloc"]